--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 body {
-  background-image: url(https://i.imgur.com/YPBnXKE.jpg);
+  background-image: url(https://i.pinimg.com/originals/45/d4/59/45d4595488d79792342ba0ab12dc071f.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -20,157 +20,3 @@ body:before {
   filter: blur(10px);
 }
 
-h1 {
-  color: white !important;
-  text-align: center;
-  font-size: 4em !important;
-  letter-spacing: 7px;
-  padding-bottom: 50px;
-  text-shadow: black 2px 0px 15px;
-}
-
-.navitem:hover {
-  background-color: #d00002 !important;
-}
-
-.searchbar {
-  margin: 0px 20px;
-}
-center {
-  justify-content: center !important;
-}
-
-.field.has-addons {
-  justify-content: center;
-}
-
-.searchbar {
-  position: relative;
-  top: 100px;
-}
-
-.input {
-  box-shadow: black 1px 1px 20px 1px;
-}
-
-.input:active, .input:focus {
-  border-color: #d00002 !important;
-}
-
-.marvbtn {
-  background-color: #d80103;
-  color: white;
-  border: none;
-  box-shadow: black 1px 1px 20px 1px;
-}
-
-.marvbtn:hover, .marvbtn:active {
-  background-color: black;
-  color: #d80103;
-  border: 1px solid white;
-}
-
-form {
-  padding-bottom: 100px;
-}
-
-.charimg {
-  height: 300px;
-  width: 100%;
-  border: 1px solid black;
-  box-shadow: black 0px 0px 11px 2px;
-  transition: all .2s ease-in-out;
-}
-
-
-.card:hover {
-  transform: scale(1.1);
-}
-
-.characters {
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.charhold {
-  flex-basis: auto;
-  flex-grow: 0;
-}
-
-.overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #008CBA;
-  overflow: hidden;
-  width: 100%;
-  height: 0;
-  transition: .5s ease;
-}
-
-.contain:hover .overlay {
-  height: 100%;
-}
-
-.text {
-  white-space: nowrap; 
-  color: white;
-  font-size: 20px;
-  width: 50%;
-  position: absolute;
-  overflow: hidden;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-
-.charcard p {
-  display: none;
-}
-
-.charcard:hover p {
-  display: block;
-}
-
-.card {
-  width: 300px;
-  margin: 40px;
-  box-shadow: #000000 1px 1px 7px 0px;
-  transition: all .2s ease-in-out;
-  animation: 1s ease-out 0s 1 slideInFrombottom;
-}
-
-.title {
-  text-align: center;
-}
-
-.media-content {
-  text-align: center;
-}
-
-
-@keyframes slideInFrombottom {
-  0% {
-    transform: translateY(100%);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-.abouttext {
-  text-align: center;
-  font-size: 36px;
-  color: white;
-  -webkit-text-stroke: black 1px;
-}
-
-.logohold {
-  justify-content: center;
-}
-
-.abtimg {
-  width: 250px;
-}
