--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,15 @@ body:before {
   filter: blur(10px);
 }
 
+.navbar {
+  min-height: 7.25rem;
+}
+
+.navbar-item img {
+  width: 300px;
+  max-height: 100%;
+}
+
 .hero-container {
   background-image: linear-gradient(to right bottom, #29d3d3, #00cefc, #56c1ff, #b5abff, #f890e7);
   text-align: center;
@@ -50,7 +59,7 @@ body:before {
 }
 
 .buynowcont {
-  height: 300px;
+
   background-color: lightblue;
   text-align: center;
 }
