--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,77 @@
+@import url("https://fonts.googleapis.com/css?family=Questrial");
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ margin: 0;
+ padding: 0;
+ font-family: "Questrial";
+ -webkit-font-smoothing: antialiased;
+ -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+ font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+   monospace;
 }
+#root > div > div > div > div.threecol.center {
+ margin: 100px;
+ padding: 50px;
+ margin-top: 100px;
+}
+
+#root > div > div > div > div.threecol.center > div > div:nth-child(1) > p,
+#root > div > div > div > div.threecol.center > div > div:nth-child(2) > p,
+#root > div > div > div > div.threecol.center > div > div:nth-child(3) > p {
+ width: 250px;
+}
+
+#root > div > div > div > div.threecol.center > div > div:nth-child(1),
+#root > div > div > div > div.threecol.center > div > div:nth-child(2),
+#root > div > div > div > div.threecol.center > div > div:nth-child(3) {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+#root > div > div > div > div.threecol.center > div > div:nth-child(1) > h2,
+#root > div > div > div > div.threecol.center > div > div:nth-child(2) > h2,
+#root > div > div > div > div.threecol.center > div > div:nth-child(3) > h2 {
+}
+
+#root > div > div > div > div.threecol.center > div > div:nth-child(1) > h4,
+#root > div > div > div > div.threecol.center > div > div:nth-child(2) > h4,
+#root > div > div > div > div.threecol.center > div > div:nth-child(3) > h4 {
+ color: grey;
+}
+
+#root > div > div > div > div.threecol.center > h1 {
+ font-size: 4em;
+}
+
+.desctext {
+ font-famil: "Quriel";
+}
+#root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
+ color: rgb (65, 182, 230);
+}
+
+#root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
+}
+
+/* .hero-container {
+ background: white;
+} */
+
+#root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
+ color: rgb (65, 182, 230);
+}
+
+#root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
+  color: rgb (65, 182, 230);
+ }
+ 
+ #root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
+ }
+ 
+ .hero-container {
+  background: white !important;
+ }
