--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,35 @@
 @import url("https://fonts.googleapis.com/css?family=Questrial");
 
 body {
- margin: 0;
- padding: 0;
- font-family: "Questrial" !important;
- -webkit-font-smoothing: antialiased;
- -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  font-family: "Questrial" !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
- font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-   monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 #root > div > div > div > div.threecol.center {
- margin: 100px;
- padding: 50px;
- margin-top: 100px;
+  margin: 100px;
+  padding: 50px;
+  margin-top: 100px;
 }
 
 #root > div > div > div > div.threecol.center > div > div:nth-child(1) > p,
 #root > div > div > div > div.threecol.center > div > div:nth-child(2) > p,
 #root > div > div > div > div.threecol.center > div > div:nth-child(3) > p {
- width: 250px;
+  width: 250px;
 }
 
 #root > div > div > div > div.threecol.center > div > div:nth-child(1),
 #root > div > div > div > div.threecol.center > div > div:nth-child(2),
 #root > div > div > div > div.threecol.center > div > div:nth-child(3) {
- display: flex;
- flex-direction: column;
- align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #root > div > div > div > div.threecol.center > div > div:nth-child(1) > h2,
@@ -40,16 +40,15 @@ code {
 #root > div > div > div > div.threecol.center > div > div:nth-child(1) > h4,
 #root > div > div > div > div.threecol.center > div > div:nth-child(2) > h4,
 #root > div > div > div > div.threecol.center > div > div:nth-child(3) > h4 {
- color: grey;
+  color: grey;
 }
 
 #root > div > div > div > div.threecol.center > h1 {
- font-size: 4em;
+  font-size: 4em;
 }
 
-
 #root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
- color: rgb(65, 182, 230) !important;
+  color: rgb(65, 182, 230) !important;
 }
 
 #root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
@@ -60,16 +59,71 @@ code {
 } */
 
 #root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
- color: rgb (65, 182, 230);
+  color: rgb (65, 182, 230);
 }
 
 #root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
   color: rgb (65, 182, 230);
- }
- 
- #root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
- }
- 
- .hero-container {
+}
+
+#root > div > div > div > div.hero-container > div > div.column.desctext > h1 {
+}
+
+.hero-container {
   background: white !important;
- }
+}
+
+#root > div > div > div:nth-child(1),
+#root > div > div > div:nth-child(2),
+#root > div > div > div:nth-child(3) {
+  background: white;
+  padding: 50px;
+  margin: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#root > div > div > div:nth-child(1) > h1,
+#root > div > div > div:nth-child(2) > h1,
+#root > div > div > div:nth-child(3) > h1 {
+  font-size: 2em;
+  font-weight: bold;
+  margin: 30px;
+}
+
+#root > div > div > div:nth-child(1) > button,
+#root > div > div > div:nth-child(2) > button,
+#root > div > div > div:nth-child(3) > button {
+  background-image: none;
+  background: #ff1574;
+  border: 3px solid #ff1574;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: open sans, helvetica neue, Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  padding: 7px 15px;
+  font-size: 1.4rem;
+  box-sizing: border-box;
+  vertical-align: middle;
+  border-radius: 5px;
+}
+
+#root > div > div > div:nth-child(1) > button:hover {
+  color: white;
+}
+
+#root > div > div > div:nth-child(1) > img,
+#root > div > div > div:nth-child(2) > img,
+#root > div > div > div:nth-child(3) > img {
+  height: 200px;
+}
+
+#root > div > div > div:nth-child(1) > h2,
+#root > div > div > div:nth-child(2) > h2,
+#root > div > div > div:nth-child(3) > h2 {
+  font-size: 1.5em;
+  color: grey;
+  margin: 15px;
+}
