--- a/src/index.css
+++ b/src/index.css
@@ -294,11 +294,11 @@ code {
 .aboutcontainer {
   background: white;
   height: 1000px;
-  border-radius: 0 0 25px 25px;
+  margin: 50px;
 }
 
 .aboutTitle {
-  font-size: 3em;
+  font-size: 5em;
   margin: 25px;
 }
 
@@ -308,5 +308,5 @@ code {
 }
 .final {
   color: rgb(219, 62, 177) !important;
-  font-size: 5em;
+  font-size: 3em;
 }
